feat: Use Flux instead of Mono

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 app:
     rest:
         posts:
-            base-url: https://jsonplaceholder.typicode.com/
+            base-url: http://jsonplaceholder.typicode.com/sdfsdf
             endpoint: posts
             retry.max-attempts: 3
 
